--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -12,8 +12,10 @@
 </div>-->
 <app-sb-main-page-header></app-sb-main-page-header>
 <div class="main-page-section-container text-[#f24139]">
-    <app-main-page-section *ngIf="rueckenFitSection" [sectiondata]='rueckenFitSection' isFirstSection='true'
-        displayInstructor='true' displayLocations='true'>
+    <app-main-page-section *ngIf="aboutMeSection" [sectiondata]='aboutMeSection' isFirstSection='true' hideTitle="true">
+    </app-main-page-section>
+    <app-main-page-section *ngIf="rueckenFitSection" [sectiondata]='rueckenFitSection' displayInstructor='true'
+        displayLocations='true'>
     </app-main-page-section>
     <app-main-page-section *ngIf="nordicWalkingSection" [sectiondata]='nordicWalkingSection' isFirstSection='true'
         displayInstructor='true'></app-main-page-section>
