--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,12 @@ html {
     /* Modern Browsers */ url("assets/font/August-Bold.ttf") format("truetype"); /* Safari, Android, iOS */
 }
 
+@font-face {
+  font-family: HelveticaNowDislay;
+  src: url("assets/font/HelveticaNowDisplay-Regular.woff") format("woff"),
+    /* Modern Browsers */ url("assets/font/HelveticaNowDisplay-Regular.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+
 .font-august {
   font-family: august;
 }
@@ -46,18 +52,19 @@ a {
 }
 
 .speech-bubble {
-  font-size: 2.5rem;
-  line-height: 3.5rem;
-  text-transform: uppercase;
+  font-size: 2rem;
+  line-height: 125%;
+  // text-transform: uppercase;
   text-align: center;
   max-width: 800px;
   margin: 0 auto;
   background-color: $secondary-text-color;
   border-radius: 50px;
   color: white;
-  font-family: august;
-  padding: 30px;
+  font-family: HelveticaNowDislay;
+  padding: 50px 80px;
   position: relative;
+  font-style: italic;
 
   &:after {
     content: "";
