--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -4,14 +4,13 @@
 .footer-container {
     .footer {
         overflow: hidden;
-        background-color: #000000;
         bottom: 0; /* Position the navbar at the top of the page */
         width: 100%; /* Full width */
         z-index: 10;
         color: $main-text-color;
         .footer-section-container {
             .footer-section {
-                text-align: center;
+                // text-align: center;
                 .footer-section-heading {
                     font-size: 20px;
                     font-weight: 600;
@@ -22,7 +21,7 @@
                     font-size: 14px;
 
                     &.footer-section-content-social {
-                        text-align: center;
+                        // text-align: center;
                     }
 
                     .footer-section-content-link {
@@ -48,18 +47,18 @@
                         display: inline-block;
                         text-decoration: none;
                         color: $main-text-color;
-                        margin: 10px;
+                        // margin: 10px;
                         position: relative;
                         width: 40px;
                         height: 40px;
-                        padding: 10px;
-                        @include border-radius(30px);
-                        border: 1px solid #fff;
+                        // padding: 10px;
+                        // @include border-radius(30px);
+                        // border: 1px solid #fff;
                         i {
                             position: absolute;
                             font-size: 30px;
                             width: 40px;
-                            left: 10px;
+                            // left: 10px;
                             top: 13px;
                         }
                     }
@@ -100,12 +99,12 @@
                         padding-right: 50px;
                     }
                     &.footer-section-social {
-                        margin: 0 auto;
+                        // margin: 0 auto;
                         .footer-section-content-link-icon:first-of-type {
                             margin-left: 0;
                         }
                     }
-                    &.footer-section-legal {
+                    &.footer-section-, &.footer-section-contact {
                         padding-left: 50px;
                     }
                 }
