--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -11,7 +11,7 @@
     <div class="video-overlay" [ngClass]="videoLoaded === true  ? 'hide' : ''"></div>
 </div>-->
 <app-sb-main-page-header></app-sb-main-page-header>
-<div class="main-page-section-container text-[#f24139]">
+<div class="main-page-section-container">
     <app-main-page-section *ngIf="aboutMeSection" [sectiondata]='aboutMeSection' isFirstSection='true' hideTitle="true">
     </app-main-page-section>
     <app-main-page-section *ngIf="rueckenFitSection" [sectiondata]='rueckenFitSection' displayInstructor='true'
@@ -21,5 +21,26 @@
         displayInstructor='true'></app-main-page-section>
     <app-main-page-section *ngIf="ernaehrungsberatungSection" [sectiondata]='ernaehrungsberatungSection'>
     </app-main-page-section>
-
+    <div class="mt-[100px] main-content-container main-content-container-padding">
+            <div class="main-page-section-container">
+                <div class="main-page-section-content-container">
+                    <div class="main-page-section-content">
+                        <div class="main-page-section-caption text-heading-1 font-august md:text-center">
+                            Kontakt
+                        </div>
+                        <div class="speech-bubble mt-[50px]">
+                            <p>
+                                Sie interessieren sich für meine Kurse?
+                            </p>
+                            <p class="mt-[20px]">
+                                Dann melden Sie sich telefonisch bei mir, unter:
+                            </p>
+                            <div class="rounded-[50px] bg-[#fff] inline-block mx-auto text-main-text-color">
+                                {{contact.phone}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
 </div>
