--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -35,12 +35,12 @@
             Social Media
         </div>
         <div class="footer-section-content footer-section-content-social">
-          <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
+          <!-- <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
             <i class="fab fa-facebook-square fa-3x"></i>
           </a>
           <a class="footer-section-content-link-icon" href="https://www.instagram.com/das_tanztheater/">
             <i class="fab fa-instagram fa-3x"></i>
-          </a>
+          </a> -->
           <a class="footer-section-content-link-icon" href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
             <i class="fab fa-youtube fa-3x"></i>
           </a>
@@ -56,8 +56,8 @@
           Datenschutz
         </a>
         <div class="footer-section-content">
-          <div class="footer-section-content-link">Geschützt durch Tanztheater Anita Hanke 2017</div>
-          <div class="footer-section-content-link">Web Design: Niko Reschke und Yasmin Hollenbenders</div>
+          <div class="footer-section-content-link">Geschützt durch Susanne Brenner 2022</div>
+          <div class="footer-section-content-link">Web Design: Niko Reschke</div>
         </div>
       </div>
     </div>
