--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ html {
   width: 100%;
   margin: 0;
   font: 400 15px/1.8 "Raleway", sans-serif;
-  color: #000;
+  color: $main-text-color;
   background-color: $main-background-color;
 }
 
@@ -57,7 +57,8 @@ a {
   // text-transform: uppercase;
   text-align: center;
   max-width: 800px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   background-color: $secondary-text-color;
   border-radius: 50px;
   color: white;
@@ -65,7 +66,9 @@ a {
   padding: 50px 80px;
   position: relative;
   font-style: italic;
+}
 
+.speech-bubble-inner-html {
   &:after {
     content: "";
     position: absolute;
