--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,7 +4,7 @@
 
 $header-link-color: #f2f2f2;
 $header-hover-background-color: #595959;
-$main-text-color: rgb(24, 24, 24);
+$main-text-color: #f24139;
 $secondary-text-color: #f24139;
 $main-text-color-on-dark-bg: #ffffff;
 $main-text-color-on-light-bg: #252525;
