--- a/src/app/components/header-image/header-image.component.scss
+++ b/src/app/components/header-image/header-image.component.scss
@@ -12,7 +12,7 @@
 
 @keyframes squish-header-image {
     from {
-        height: calc(100% - 70px);
+        height: 100%;
     }
     to {
         height: 400px;
@@ -20,7 +20,7 @@
 }
 
 .header-image-component {
-    height: calc(100% - 70px);
+    height: 100%;
     width: 100%;
     position: relative;
     animation-name: squish-header-image;
@@ -63,7 +63,7 @@
   .header-image-component {
     .header-image-container {
       .header-image {
-        background-attachment: fixed;
+        // background-attachment: fixed;
       }
     }
   }
