--- a/src/app/components/sb-main-page-header/sb-main-page-header.component.html
+++ b/src/app/components/sb-main-page-header/sb-main-page-header.component.html
@@ -1,7 +1,7 @@
 <div class="text-center h-full w-full flex flex-col main-content-container main-content-container-padding">
     <div class="bg"></div>
-    <div class="h-full w-full max-w-[1200px] ml-[auto] mr-[auto]">
-        <div class="h-[35%] relative">
+    <div class="h-full w-full ml-[auto] mr-[auto]">
+        <div class="h-[35%] relative  main-content">
             <div class="outer">
                 <div class="middle">
                     <div class="inner">
@@ -12,14 +12,14 @@
                 </div>
             </div>
         </div>
-        <div class="image-container flex h-[65%] pb-[100px]">
+        <div class="image-container flex h-[65%] pb-[100px]  main-content">
             <div class="img-tile">
                 <span class="title">Rücken-Fit</span>
                 <div class="img-container">
                     <div class="img-background img1"></div>
                     <div class="img-overlay"></div>
                 </div>
-              
+
             </div>
 
             <div class="img-tile">
