--- a/src/app/main-page/main-page-section/main-page-section.component.html
+++ b/src/app/main-page/main-page-section/main-page-section.component.html
@@ -1,7 +1,7 @@
 <div class="main-page-section pt-[100px] main-content-container main-content-container-padding"
   [ngClass]="firstSection ? 'first-section' : ''">
   <div class="{{section.cssClass}} main-page-section-background" [ngStyle]="getBackgroundStyle(section.image)">
-    <div class="main-page-section-container" [ngClass]="firstSection ? 'first-section-container' : ''">
+    <div class="main-page-section-container main-content" [ngClass]="firstSection ? 'first-section-container' : ''">
       <div class="main-page-section-content-container">
         <div class="main-page-section-content" [ngClass]="section.routerLink ? 'section-link' : ''"
           (click)="goToSection(section)">
@@ -9,7 +9,8 @@
             {{section.title}}</div>
           <p class="main-page-section-description text-default mb-[50px]" [innerHTML]="section.description">
           </p>
-          <div class="speech-bubble" [innerHTML]="section.speechBubble" *ngIf="section.speechBubble">
+          <div class="speech-bubble speech-bubble-inner-html" [innerHTML]="section.speechBubble"
+            *ngIf="section.speechBubble">
 
           </div>
           <div class="w-[300px] h-[300px] mx-auto mt-[50px] bg-cover bg-center rounded-[300px]"
@@ -22,19 +23,23 @@
 
           <div class="text-default" *ngIf="displayLocations">
             <div class="text-heading-1 font-august">Räumlichkeiten</div>
-            <div class="md:flex md:gap-[15px]">
-              <div class="md:flex-1" *ngFor="let location of locations; index as i">
-                <div class="text-heading-2 font-august">
+            <div class="md:flex md:gap-[15px] mt-[50px]">
+              <div class="md:flex-1 flex flex-col bg-secondary-background-color rounded-[3px] pb-[20px] px-[20px]"
+                *ngFor="let location of locations; index as i">
+                <div class="text-heading-2 font-august flex-1">
                   {{location.name}}
                 </div>
                 <div class="">{{location.addressName}}</div>
                 <div class="">{{location.addressStreet}}</div>
                 <div class="mb-[20px]">{{location.addressZIP}} {{location.addressCity}}</div>
-                <div
-                  class="inline pl-[20px] pr-[20px] pt-[10px] pb-[10px] bg-secondary-text-color text-[#fff] rounded-[20px]">
-                  Auf Google Maps
-                  anzeigen
+                <div class="">
+                  <div
+                    class="inline pl-[20px] pr-[20px] pt-[10px] pb-[10px] bg-secondary-text-color text-[#fff] rounded-[20px]">
+                    Auf Google Maps
+                    anzeigen
+                  </div>
                 </div>
+
               </div>
             </div>
           </div>
