--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,238 +1,243 @@
-@import '../../variables.scss';
-@import '../../mixins.scss';
+@import "../../variables.scss";
+@import "../../mixins.scss";
 
 div {
-    display: block;
+  display: block;
+}
+
+.contact-label {
+  display: inline-block;
+  padding: 5px 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .main-page-title-video-container {
-    position: relative;
-    display: block;
+  position: relative;
+  display: block;
+  width: 100%;
+  overflow: hidden;
+  //padding-bottom: 56.25%; /* 16:9 */
+  //padding-top: 25px;
+  //height: 0;
+  //height: 300px;
+  height: 100%;
+
+  iframe,
+  video {
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    overflow: hidden;
-	//padding-bottom: 56.25%; /* 16:9 */
-	//padding-top: 25px;
-    //height: 0;
-    //height: 300px;
+    height: calc(100% - 70px);
+    margin-top: 70px;
+    background-color: $main-background-color-dark;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  video {
+    opacity: 0;
+    @include transition(opacity 0.5s ease);
+    transition-delay: 1s;
+    &.show {
+      opacity: 1;
+    }
+  }
+
+  .title-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
-
-    iframe, video {
-        opacity: 1;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: calc(100% - 70px);
-        margin-top: 70px;
-        background-color: $main-background-color-dark;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+    opacity: 0;
+    @include transition(opacity 1s ease);
+    &.show {
+      opacity: 1;
+      .title-image {
+        animation: slow-zoom-image-out 20s ease forwards, fade-in 2s ease forwards;
+      }
+    }
+    .title-image {
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      object-fit: cover;
+    }
+  }
+  .video-overlay {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 1;
+    background-color: $main-background-color-dark;
+    height: 100%;
+    opacity: 0;
+    @include transition(opacity 1.5s ease);
+    &.hide {
+      opacity: 0;
+    }
+  }
+  .title-container {
+    // z-index: 2;
+    height: 100%;
+    top: 0;
+    @include flexbox();
+    @include flex-direction(column);
+    color: $main-text-color-on-dark-bg;
+    @include transition(opacity 0.5s ease);
+    opacity: 1;
+    &.hide {
+      opacity: 0;
+    }
+    .title {
+      max-width: 450px;
+      padding: 0 25px;
+      opacity: 0;
+      text-transform: uppercase;
+      animation-name: fade-in;
+      animation-duration: 1s;
+      animation-timing-function: ease;
+      animation-fill-mode: forwards;
+      animation-delay: 1.5s;
+      font-size: 20px;
+      line-height: 30px;
+      font-weight: 600;
+      margin-bottom: 70px;
     }
 
-    video {
+    .logo-container {
+      margin-bottom: 10px;
+      .logo {
+        margin: 0 auto;
+        background-image: url("../../resources/Logo.png");
+        background-size: 100% 100%;
+        height: 75px;
+        width: 30px;
+        transform: translateY(15px);
         opacity: 0;
-        @include transition(opacity 0.5s ease);
-        transition-delay: 1s;
-        &.show {
-            opacity: 1;
-        }
+        animation: fade-in 1s ease forwards, slide-up 1s ease forwards;
+        animation-delay: 4.5s;
+      }
     }
-
-
-    .title-image-container {
+    .play-icon-container {
+      z-index: 1;
+      width: 100%;
+      position: relative;
+      margin-top: 100px;
+      @include flex(1);
+      .play-icon-outer-ring {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        top: 50%;
+        left: 50%;
+        display: inline-block;
+        margin-top: -45px;
+        margin-left: -45px;
+        background-color: rgba($main-text-color-on-dark-bg, 0.1);
+        @include border-radius(70px);
+        width: 90px;
+        height: 90px;
         opacity: 0;
-        @include transition(opacity 1s ease);
-        &.show {
-            opacity: 1;
-            .title-image {
-                animation: slow-zoom-image-out 20s ease forwards, fade-in 2s ease forwards;
-            }
+        animation-name: fade-in;
+        animation-duration: 0.5s;
+        animation-timing-function: ease;
+        animation-fill-mode: forwards;
+        animation-delay: 3s;
+        @include transition(background-color 0.3s ease);
+        &:hover {
+          cursor: pointer;
+          background-color: rgba($main-text-color-on-dark-bg, 0.2);
         }
-        .title-image {
-            width: 100%;
-            height: 100%;
-            opacity: 0;
-            object-fit: cover;
-        }
-    }
-    .video-overlay {
-        display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        opacity: 1;
-        background-color: $main-background-color-dark;
-        height: 100%;
-        opacity: 0;
-        @include transition(opacity 1.5s ease);
-        &.hide {
-            opacity: 0;
-        }
-    }
-    .title-container {
-        // z-index: 2;
-        height: 100%;
-        top: 0;
-        @include flexbox();
-        @include flex-direction(column);
-        color: $main-text-color-on-dark-bg;
-        @include transition(opacity 0.5s ease);
-        opacity: 1;
-        &.hide {
-            opacity: 0;
-        }
-        .title {
-            max-width: 450px;
-            padding: 0 25px;
-            opacity: 0;
-            text-transform: uppercase;
-            animation-name: fade-in;
-            animation-duration: 1s;
-            animation-timing-function: ease;
-            animation-fill-mode: forwards;
-            animation-delay: 1.5s;
-            font-size: 20px;
-            line-height: 30px;
-            font-weight: 600;
-            margin-bottom: 70px;
-        }
-
-        .logo-container {
-            margin-bottom: 10px;
-            .logo {
-                margin: 0 auto;
-                background-image: url("../../resources/Logo.png"); 
-                background-size: 100% 100%;
-                height: 75px;
-                width: 30px;
-                transform: translateY(15px);
-                opacity: 0;
-                animation: fade-in 1s ease forwards, slide-up 1s ease forwards;
-                animation-delay: 4.5s;
-            }
-        }
-        .play-icon-container {
-            z-index: 1;
-            width: 100%;
-            position: relative;
-            margin-top: 100px;
-            @include flex(1);
-            .play-icon-outer-ring {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                display: inline-block;
-                margin-top: -45px;
-                margin-left: -45px;
-                background-color: rgba($main-text-color-on-dark-bg, 0.1);
-                @include border-radius(70px);
-                width: 90px;
-                height: 90px;
-                opacity: 0;
-                animation-name: fade-in;
-                animation-duration: 0.5s;
-                animation-timing-function: ease;
-                animation-fill-mode: forwards;
-                animation-delay: 3s;
-                @include transition(
-                    background-color 0.3s ease
-                );
-                &:hover {
-                    cursor: pointer;
-                    background-color: rgba($main-text-color-on-dark-bg, 0.2);
-                }
-                .play-icon-inner-ring {
-                    width: 70px;
-                    height: 70px;
-                    margin-left: 9px;
-                    margin-top: 9px;
-                    border-radius: 90px;
-                    border: 1px solid $main-text-color-on-dark-bg;
-                    .play-icon{
-                        display: inline-block;
-                        margin-top: 28px;
-                        margin-left: 28px;
-                        color: $main-text-color-on-dark-bg;
-                    }
-                    .play-icon-label {
-                        display: inline-block;
-                        color: $main-text-color-on-light-bg;
-                    }
-                }
-            }
-        }
-    }
-
-    .scroll-icon-container {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        opacity: 0;
-        @include transition(opacity 0.5s 3s ease);
-        .scroll-icon {
-            width: 1px;
-            height: 0px;
-            background-color: #ffffff;
-            margin: 0 auto;
-            @include transition(height 0.5s ease);
-        }
-        .scroll-label {
-            position: absolute;
-            bottom: 8px;
-            left: calc(50% + 15px);
+        .play-icon-inner-ring {
+          width: 70px;
+          height: 70px;
+          margin-left: 9px;
+          margin-top: 9px;
+          border-radius: 90px;
+          border: 1px solid $main-text-color-on-dark-bg;
+          .play-icon {
+            display: inline-block;
+            margin-top: 28px;
+            margin-left: 28px;
             color: $main-text-color-on-dark-bg;
-            font-size: 10px;
-            text-transform: uppercase;
-            opacity: 0;
-            @include transition(opacity 0.5s ease);
+          }
+          .play-icon-label {
+            display: inline-block;
+            color: $main-text-color-on-light-bg;
+          }
         }
-        &.show {
-            opacity: 1;
-            .scroll-icon {
-                height: 30px;
-            }
-            .scroll-label {
-                opacity: 1;
-            }
-        }
+      }
     }
+  }
+
+  .scroll-icon-container {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    opacity: 0;
+    @include transition(opacity 0.5s 3s ease);
+    .scroll-icon {
+      width: 1px;
+      height: 0px;
+      background-color: #ffffff;
+      margin: 0 auto;
+      @include transition(height 0.5s ease);
+    }
+    .scroll-label {
+      position: absolute;
+      bottom: 8px;
+      left: calc(50% + 15px);
+      color: $main-text-color-on-dark-bg;
+      font-size: 10px;
+      text-transform: uppercase;
+      opacity: 0;
+      @include transition(opacity 0.5s ease);
+    }
+    &.show {
+      opacity: 1;
+      .scroll-icon {
+        height: 30px;
+      }
+      .scroll-label {
+        opacity: 1;
+      }
+    }
+  }
 }
 
 @media (min-width: $media-breakpoint-md) {
-    .main-page-title-video-container {
-        display: block;
-        // position: relative;
-        //padding-bottom: 56.25%; /* 16:9 */
-        //padding-top: 25px;
-        //height: 0;
-        height: 100%;
-        .title-container {
-            margin-bottom: 100px;
-            .title {
-                padding-left: 50px;
-                max-width: 600px;
-            }
-        }
+  .main-page-title-video-container {
+    display: block;
+    // position: relative;
+    //padding-bottom: 56.25%; /* 16:9 */
+    //padding-top: 25px;
+    //height: 0;
+    height: 100%;
+    .title-container {
+      margin-bottom: 100px;
+      .title {
+        padding-left: 50px;
+        max-width: 600px;
+      }
     }
+  }
 }
 
 @media (min-width: $media-breakpoint-lg) {
-    .main-page-title-video-container {
-        // position: relative;
-        //padding-bottom: 56.25%; /* 16:9 */
-        //padding-top: 25px;
-        //height: 0;
-        .title-container {
-            .title {
-                padding-left: 100px;
-            }
-        }
+  .main-page-title-video-container {
+    // position: relative;
+    //padding-bottom: 56.25%; /* 16:9 */
+    //padding-top: 25px;
+    //height: 0;
+    .title-container {
+      .title {
+        padding-left: 100px;
+      }
     }
+  }
 }
