--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,65 +1,59 @@
-<div class="footer-container" *ngIf="footerContentLoaded && mainPageContentLoaded">
-  <div class="footer">
-    <div class="footer-section-container">
-      <div class="footer-section footer-section-contact">
-        <div class="footer-section-heading">
-          Kontakt
-        </div>
-        <div class="footer-section-content" *ngIf="locationMG && email">
-          <span class="footer-section-content-link">{{locationMG.addressName}}</span>
-          <span class="footer-section-content-link">{{locationMG.addressStreet}}</span>
-          <span class="footer-section-content-link footer-section-content-link-inline">{{locationMG.addressZIP}}</span>
-          <span class="footer-section-content-link footer-section-content-link-inline">{{locationMG.addressCity}}</span>
-          <span class="footer-section-content-link consultation-label" [routerLink]="['/standorte', 0]">Beratungszeiten<i class="fas fa-arrow-right"></i></span>
-          <!-- <span class="footer-section-content-link">{{locationMG.consultationTime1}}</span>
-          <span class="footer-section-content-link" *ngIf="locationMG.consultationTime2">{{locationMG.consultationTime2}}</span>
-          <span class="footer-section-content-link" *ngIf="locationMG.consultationTime3">{{locationMG.consultationTime3}}</span> -->
-          <div class="footer-section-content-break"></div>
-          <span class="footer-section-content-link">{{locationLB.addressName}}</span>
-          <span class="footer-section-content-link">{{locationLB.addressStreet}}</span>
-          <span class="footer-section-content-link footer-section-content-link-inline">{{locationLB.addressZIP}}</span>
-          <span class="footer-section-content-link footer-section-content-link-inline">{{locationLB.addressCity}}</span>
-          <span class="footer-section-content-link consultation-label" [routerLink]="['/standorte', 1]">Beratungszeiten<i class="fas fa-arrow-right"></i></span>
-          <!-- <span class="footer-section-content-link">{{locationLB.consultationTime1}}</span>
-          <span class="footer-section-content-link" *ngIf="locationLB.consultationTime2">{{locationLB.consultationTime2}}</span>
-          <span class="footer-section-content-link" *ngIf="locationLB.consultationTime3">{{locationLB.consultationTime3}}</span> -->
-          <div class="footer-section-content-break"></div>
-          <span class="footer-section-content-link"><a [href]="['tel:', phone, '?']" target="_top">Tel. {{phone}}</a></span>
-          <span class="footer-section-content-link"><a [href]="['mailto:', email, '?']" target="_top">{{email}}</a></span>
+<div class="footer-container main-content-container main-content-container-padding"
+  *ngIf="footerContentLoaded && mainPageContentLoaded">
+  <div class="main-content">
+    <div class="footer">
+      <div class="footer-section-container">
+        <div class="footer-section footer-section-left">
+          <!-- <div class="footer-section-heading">
+                Kontakt
+              </div> -->
+          <div class="footer-section-content" *ngIf="contact">
+            <span class="footer-section-content-link">{{contact.name}}</span>
+            <span class="footer-section-content-link">{{contact.street}}</span>
+            <span class="footer-section-content-link">{{contact.zipAndCity}}</span>
+            <!-- <span class="footer-section-content-link footer-section-content-link-inline">{{locationMG.addressCity}}</span> -->
+            <div class="footer-section-content-break"></div>
+            <!-- <span class="footer-section-content-link"><a [href]="['tel:', phone, '?']" target="_top">Tel.
+                    {{contact.phone}}</a></span>
+                <span class="footer-section-content-link"><a [href]="['mailto:', email, '?']"
+                    target="_top">{{contact.email}}</a></span> -->
+          </div>
         </div>
       </div>
-    </div>
-    <div class="footer-section-container">
-      <div class="footer-section footer-section-social">
-        <div class="footer-section-heading">
-            Social Media
-        </div>
-        <div class="footer-section-content footer-section-content-social">
-          <!-- <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
-            <i class="fab fa-facebook-square fa-3x"></i>
-          </a>
-          <a class="footer-section-content-link-icon" href="https://www.instagram.com/das_tanztheater/">
-            <i class="fab fa-instagram fa-3x"></i>
-          </a> -->
-          <a class="footer-section-content-link-icon" href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
-            <i class="fab fa-youtube fa-3x"></i>
-          </a>
+      <div class="footer-section-container">
+        <div class="footer-section footer-section-middle">
+          <!-- <div class="footer-section-heading">
+                Social Media
+              </div> -->
+          <div class="footer-section-content footer-section-content-middle">
+            <!-- <a class="footer-section-content-link-icon" href="https://www.facebook.com/Tanztheater/">
+                  <i class="fab fa-facebook-square fa-3x"></i>
+                </a>
+                <a class="footer-section-content-link-icon" href="https://www.instagram.com/das_tanztheater/">
+                  <i class="fab fa-instagram fa-3x"></i>
+                </a> -->
+            <a class="footer-section-content-link-icon"
+              href="https://www.youtube.com/user/TanztheaterAnitaHank/videos?view=0&sort=dd&flow=grid">
+              <i class="fab fa-youtube fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="footer-section-container">
-      <div class="footer-section footer-section-legal">
-        <a class="footer-section-heading" routerLink="/impressum">
+      <div class="footer-section-container">
+        <div class="footer-section footer-section-right">
+          <a class="footer-section-heading" routerLink="/impressum">
             Impressum
-        </a><br>
-        <a class="footer-section-heading" routerLink="/datenschutz">
-          Datenschutz
-        </a>
-        <div class="footer-section-content">
-          <div class="footer-section-content-link">Geschützt durch Susanne Brenner 2022</div>
-          <div class="footer-section-content-link">Web Design: Niko Reschke</div>
+          </a><br>
+          <a class="footer-section-heading" routerLink="/datenschutz">
+            Datenschutz
+          </a>
+          <div class="footer-section-content">
+            <div class="footer-section-content-link">Geschützt durch Susanne Brenner 2022</div>
+            <div class="footer-section-content-link">Web Design: Niko Reschke</div>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
 </div>
