--- a/src/app/components/sb-main-page-header/sb-main-page-header.component.html
+++ b/src/app/components/sb-main-page-header/sb-main-page-header.component.html
@@ -1,42 +1,27 @@
 <div class="text-center h-full w-full flex flex-col main-content-container main-content-container-padding">
-    <div class="bg"></div>
+    <!-- <div class="bg"></div> -->
     <div class="h-full w-full ml-[auto] mr-[auto]">
-        <div class="h-[35%] relative  main-content">
+        <div class="h-[60%] md:h-[40%] relative  main-content">
             <div class="outer">
                 <div class="middle">
-                    <div class="inner">
+                    <div class="inner pt-[70px] md:pt-[100px]">
                         <span
-                            class="text-[150px] md:text-[250px] leading-[250px] font-[august] text-[#f24139] flex-1">Susanne
+                            class="text-[140px] leading-[140px] sm:text-[150px] md:text-[160px] lg:text-[220px] lg:leading-[220px] xl:text-[250px] lg:leading-[250px] font-[august] text-[#f24139] flex-1">Susanne
                             Brenner</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="image-container flex h-[65%] pb-[100px]  main-content">
-            <div class="img-tile">
-                <span class="title">Rücken-Fit</span>
-                <div class="img-container">
-                    <div class="img-background img1"></div>
+        <div
+            class="image-container md:flex h-[40%] md:h-[60%] pb-[50px] pt-[30px] md:pt-[0px] md:pb-[100px]  main-content">
+            <div class="img-tile md:flex" *ngFor="let section of sections md:h-full">
+                <span class="title md:py-[15px]">{{section.title}}</span>
+                <div class="img-container hidden md:block">
+                    <div class="img-background" [ngClass]="section.imageClass"></div>
                     <div class="img-overlay"></div>
                 </div>
 
             </div>
-
-            <div class="img-tile">
-                <span class="title">Nordic Walking</span>
-                <div class="img-container">
-                    <div class="img-background img2"></div>
-                    <div class="img-overlay"></div>
-                </div>
-            </div>
-            <div class="img-tile">
-                <span class="title">Ernährungsberatung</span>
-                <div class="img-container">
-                    <div class="img-background img3"></div>
-                    <div class="img-overlay"></div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
