--- a/src/app/components/sb-main-page-header/sb-main-page-header.component.scss
+++ b/src/app/components/sb-main-page-header/sb-main-page-header.component.scss
@@ -21,13 +21,12 @@
 }
 
 .img-tile {
-  height: 100%;
   width: 100%;
-  display: flex;
   flex-direction: column;
   .title {
-    font-family: august;
-    font-size: 3rem;
+    font-family: HelveticaNowDislayBold;
+    font-size: 1.5rem;
+    line-height: 3rem;
     text-align: left;
     text-transform: uppercase;
     color: #f24139;
@@ -75,6 +74,7 @@ body {
 
 .bg {
   position: fixed;
+  z-index: -1;
   top: -50%;
   left: -50%;
   right: -50%;
