--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -110,6 +110,9 @@
         margin-bottom: 10px;
       }
       .appointment-container {
+        background-color: $secondary-background-color;
+        border-radius: 3px;
+        padding: 10px;
         font-size: 16px;
         margin-bottom: 10px;
         @include transition(color 0.3s ease);
@@ -200,8 +203,7 @@
           display: flex;
           flex-direction: column;
           // border: 1px solid $border-color-dark-2;
-          background-color: $secondary-background-color;
-          border-radius: 3px;
+
           &.has-course-link:hover {
             background-color: #222222;
           }
