--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-container">
+<div class="navbar-container absolute md:fixed">
   <div class="loading-animation-container" *ngIf="isBrowser">
     <div class="loader-container" [ngClass]="[pageLoaded ? 'hide' : '']">
       <div class="loader-circle"></div>
@@ -6,7 +6,7 @@
         <div class="loader-line"></div>
       </div>
     </div>
-    <div class="logo-container" [ngClass]="[pageLoaded ? 'show' : '']">
+    <div class="logo-container hidden" [ngClass]="[pageLoaded ? 'show' : '']">
       <div class="logo-container-inner">
         <div class="logo font-[august] text-[30px] hidden" routerLink="/">SB</div>
       </div>
@@ -16,7 +16,7 @@
     </div> -->
     <div class="title-container" *ngIf="pageIsHome"
       [ngClass]="[pageLoaded && pageInitiallyLoaded && isBrowser ? '' : '']">
-      <div class="title" routerLink="/">Tanztheater<br />Anita Hanke</div>
+      <div class="title" routerLink="/">Susanne<br />Brenner</div>
     </div>
   </div>
   <div class="main-content-container main-content-container-padding">
@@ -25,13 +25,20 @@
         <div class="logo"></div>
         <div class="logo-label-container">
           <div class="logo-label">
-            <span>Tanztheater</span>
-            <span>Anita Hanke</span>
+            <span>Susanne</span>
+            <span>Brenner</span>
           </div>
         </div>
       </div>
-      <div class="navbar-menu-icon-container" (click)="toggleMobileNav()" *ngIf="isBrowser">
-        <div class="navbar-menu-icon">
+      <div
+        class="hidden md:block bg-secondary-background-color float-right mt-[20px] py-[10px] px-[20px] rounded-[30px]  right-[0]"
+        *ngIf="pageLoaded">
+        <a *ngFor="let section of sections" (click)="goTo(section.id)"
+          class="px-[10px] text-[1.1rem] font-helvetica-now-bold uppercase hover:cursor-pointer">{{section.title}}</a>
+      </div>
+
+      <div class="navbar-menu-icon-container md:hidden" (click)="toggleMobileNav()" *ngIf="isBrowser && pageLoaded">
+        <div class="navbar-menu-icon bg-secondary-background-color rounded-[30px]">
           <div class="bar bar1"></div>
           <div class="bar bar2"></div>
           <div class="bar bar3"></div>
@@ -41,32 +48,15 @@
 
       </div>
       <div class="navbar-navigation">
-        <a class="navbar-navigation-link home-link" routerLink="/" (click)="closeMobileNav()">
-          Home
+        <a class="navbar-navigation-link" (click)="goTo('section01')">Rückengymnastik
         </a>
-        <div class="dropdown">
-          <a class="navbar-navigation-link" routerLink="/kurse" (click)="closeMobileNav()">Kurse
-            <i class="dropdown-arrow fa fa-caret-down"></i>
-          </a>
-          <div class="dropdown-content">
-            <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="closeMobileNav()">Kurse</a>
-            <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen"
-              (click)="closeMobileNav()">Preise &amp; Stundenpläne</a>
-          </div>
-        </div>
-        <a class="navbar-navigation-link" routerLink="/blog" (click)="closeMobileNav()">
-          Aktuelles
+        <a class="navbar-navigation-link" (click)="goTo('section02')">
+          Nordic Walking
         </a>
-        <a class="navbar-navigation-link" routerLink="/auftritte" (click)="closeMobileNav()">
-          Auftritte
+        <a class="navbar-navigation-link" (click)="goTo('section03')">
+          Ernährungsberatung
         </a>
-        <a class="navbar-navigation-link" routerLink="/team" (click)="closeMobileNav()">
-          Team
-        </a>
-        <a class="navbar-navigation-link" routerLink="/standorte" (click)="closeMobileNav()">
-          Standorte
-        </a>
-        <a class="navbar-navigation-link" routerLink="/kontakt" (click)="closeMobileNav()">
+        <a class="navbar-navigation-link" (click)="goTo('section04')">
           Kontakt
         </a>
       </div>
