--- a/src/app/sites/privacy/privacy.component.html
+++ b/src/app/sites/privacy/privacy.component.html
@@ -1,6 +1,6 @@
 <div class="imprint-content-container main-content-container main-content-container-padding">
   <div class="imprint-content main-content">
-    <h1  class="imprint-heading">Datenschutz</h1>
-    <div class="imprint-general-description" [innerHTML]='privacy.description'></div>
+    <h1 class="imprint-heading">Datenschutz</h1>
+    <div class="imprint-general-description" [innerHTML]='privacy'></div>
   </div>
 </div>
