--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,8 +27,22 @@ html {
     /* Modern Browsers */ url("assets/font/HelveticaNowDisplay-Regular.ttf") format("truetype"); /* Safari, Android, iOS */
 }
 
+@font-face {
+  font-family: HelveticaNowDislayBold;
+  src: url("assets/font/HelveticaNowDisplay-Bold.woff") format("woff"),
+    /* Modern Browsers */ url("assets/font/HelveticaNowDisplay-Bold.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+
 .font-august {
   font-family: august;
+}
+
+.font-helvetica-now {
+  font-family: HelveticaNowDislay;
+}
+
+.font-helvetica-now-bold {
+  font-family: HelveticaNowDislayBold;
 }
 
 .text-default {
@@ -36,8 +50,8 @@ html {
 }
 
 .text-heading-1 {
-  font-size: 5rem;
-  line-height: 6rem;
+  font-size: 4rem;
+  line-height: 5rem;
 }
 
 .text-heading-2 {
@@ -52,10 +66,9 @@ a {
 }
 
 .speech-bubble {
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 125%;
   // text-transform: uppercase;
-  text-align: center;
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
@@ -63,9 +76,8 @@ a {
   border-radius: 50px;
   color: white;
   font-family: HelveticaNowDislay;
-  padding: 50px 80px;
+  padding: 50px 20px;
   position: relative;
-  font-style: italic;
 }
 
 .speech-bubble-inner-html {
@@ -192,6 +204,18 @@ app-current {
   .main-content-container-padding {
     padding-left: 50px;
     padding-right: 50px;
+  }
+
+  .text-heading-1 {
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+
+  .speech-bubble {
+    padding: 50px 80px;
+    font-size: 2rem;
+    text-align: center;
+    font-style: italic;
   }
 }
 
